fixing my overflow prob

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
     ),
     url('../img/symphony.png');
     /*url('../img/subtle_white_feathers.png');*/
-    overflow: hidden;
 }
 
 
